display modifications, mostly in nsi/architecture

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -131,14 +131,14 @@
         <div class="row">
             <div class="col-12 col-md-6">
                 <div class="row">
-                <a href="./sources/general/modeleQuizz.php?niveau=python&chapitre=debuter&page=quizz1">&#10061; Python - l'environnement de développement</a>
-                <a href="./sources/general/modeleQuizz.php?niveau=python&chapitre=debuter&page=quizz2">&#10061; Python - les variables</a>
-                <a href="./sources/general/modeleQuizz.php?niveau=python&chapitre=debuter&page=quizz3">&#10061; Python - saisie clavier</a>
-                <a href="./sources/general/modeleQuizz.php?niveau=python&chapitre=debuter&page=quizz4">&#10061; Python - les conditions</a>
-                <a href="./sources/general/modeleQuizz.php?niveau=python&chapitre=debuter&page=quizz6">&#10061; Python - la boucle while</a>
-                <a href="./sources/general/modeleQuizz.php?niveau=python&chapitre=debuter&page=quizz7">&#10061; Python - les chaînes de caractères</a>
-                <a href="./sources/general/modeleQuizz.php?niveau=python&chapitre=debuter&page=quizz9">&#10061; Python - les fonctions</a>
-                <a href="./sources/general/modeleQuizz.php?niveau=python&chapitre=debuter&page=quizz10">&#10061; Python - questionnaire</a>
+                <a href="">&#10061; Python - l'environnement de développement</a>
+                <a href="">&#10061; Python - les variables</a>
+                <a href="">&#10061; Python - saisie clavier</a>
+                <a href="">&#10061; Python - les conditions</a>
+                <a href="">&#10061; Python - la boucle while</a>
+                <a href="">&#10061; Python - les chaînes de caractères</a>
+                <a href="">&#10061; Python - les fonctions</a>
+                <a href="">&#10061; Python - questionnaire</a>
                 </div>
             </div>
             <div class="col-12 col-md-6 center my-auto">
