--- a/home/templates/sources/nsi/architecture/competence11.html
+++ b/home/templates/sources/nsi/architecture/competence11.html
@@ -16,9 +16,9 @@
 
 <h3>Introduction</h3>
 
-<p>La vidéo suivante publiée par <em>Fun Mooc</em> sur YouTube explique le fonctionnement des photographies numériques :
+<p>La vidéo suivante publiée par <em>Fun Mooc</em> sur YouTube explique le fonctionnement des photographies numériques :<br/>
 
-<a href="https://www.youtube.com/watch?v=UnNPNc-F9ks&feature=emb_logo" target="_blank">&#127911; vidéo photographie numérique - Fun Mooc YouTube</a></p>
+<a href="https://www.youtube.com/watch?v=UnNPNc-F9ks&feature=emb_logo" target="_blank">&#127911; vidéo | photographie numérique, Fun Mooc YouTube</a></p>
 
 
 
@@ -38,9 +38,9 @@
 <p>La photographie numérique se base sur la perception des couleurs par l'oeil, sur la mise au point d'une image nette 
 	par le cerveau pour fournir des images de qualité. Le cerveau réalise une synthèse additive des 3 couleurs primaires (rouge, vert, bleu) 
 pour ne percevoir finalement qu'une seule couleur élémentaire.</p>
-<p>La vidéo suivante publiée par <em>l'Inserm</em> sur YouTube explique le fonctionnement de l'oeil :
+<p>La vidéo suivante publiée par <em>l'Inserm</em> sur YouTube explique le fonctionnement de l'oeil :<br/>
 
-	<a href="https://youtu.be/sYLA6U1boF8" target="_blank">&#127911; vidéo Au coeur des organes l'oeil et la vision - Inserm YouTube</a></p>
+	<a href="https://youtu.be/sYLA6U1boF8" target="_blank">&#127911; vidéo | Au coeur des organes l'oeil et la vision, Inserm YouTube</a></p>
 
 
 <!-- L'IMAGE NUMERIQUE -->
@@ -65,7 +65,7 @@ pour ne percevoir finalement qu'une seule couleur élémentaire.</p>
 
 <p>Chaque pixel est lui-même composé de lumières rouges, vertes et bleues, dont les intensités varient pour fournir une couleur 
 	élémentaire par pixel. C'est cette variation d'intensité de chaque couleur de base qui permet de créer une image.</p>
-<img src="../../images/snt/pixel.png" alt="couches Internet" width=15%>
+<img src="{% static 'home/images/nsi/pixel.png' %}" alt="couches Internet" width=15%>
 
 <p>Lorsqu'on choisit une couleur élémentaire pour une site ou une application, on utilise principalement les notations 
 	RGB et hexadécimales. Par exemple cette <span style="background-color:#ccff99;">couleur</span> s'écrit soit 
@@ -82,6 +82,13 @@ vous rendre sur un site tel que
 	<h4>A RETENIR ...</h4> 
 	<p>Les trois couleurs de base sont rouge, vert et bleu (RGB). </p>
 </div>
+
+
+<!-- LES CARTES NUMERIQUES -->
+
+<h4>Le cas particulier des cartes numériques</h4>
+
+<p>Les cartes numériques sont des images vectorielles composées de données de type raster. Les rasters sont des couches matricielles qui représentent la position que doit occuper l'image. Ainsi, chaque image est divisée en pixels qui deviennent visibles si l'on zoom suffisamment.</p>
 
 
 <!-- LES RISQUES DU NUMERIQUE -->
@@ -114,7 +121,7 @@ vous rendre sur un site tel que
 </div>
 
 <p>Les fake news regorgent de montages truqués sous forme de vidéos ou de photographies. La vidéo suivante publiée par <em>Le Temps</em> sur YouTube donne trois conseils pour trouver des photographies 
-	mensongères sur Internet :
+	mensongères sur Internet :<br/>
 <a href="https://youtu.be/SkEDb540pWA" target="_blank">&#127911; vidéo |Trois conseils pour débusquer les photos mensongères sur Internet - Le Temps YouTube</a></p>
 	
 
@@ -141,7 +148,7 @@ vous rendre sur un site tel que
 consentement écrit de la personne propriétaire ou concernée par l'image par le biais d'un contrat.</p>
 
 <p>Pour mieux comprendre le droit à l'image rendez-vous sur le 
-	<a href="https://www.service-public.fr/particuliers/vosdroits/F32103" target="_blank">&#127911; lecture | site du Service Public</a>.</p>
+	<a href="https://www.service-public.fr/particuliers/vosdroits/F32103" target="_blank">&#128211; lecture | site du Service Public</a>.</p>
 
 <div class="exerciceApplication">
 	<p><strong>A vous de jouer : </strong> résumez en quelques lignes ce que vous avez retenu du droit à l'image.</p>
@@ -191,7 +198,7 @@ consentement écrit de la personne propriétaire ou concernée par l'image par l
 	libre de droits.</p>
 
 <p>Pour bien comprendre le principe de Creative Commons, se rendre sur le site 
-	<a href="https://creativecommons.org/" target="_blank">&#127911; lecture | creativecommons.org</a></p>
+	<a href="https://creativecommons.org/" target="_blank">&#128211; lecture | creativecommons.org</a></p>
 
 <div class="exerciceApplication">
 	<p><strong>A vous de jouer : </strong>expliquez comment procéder pour créer un document sous la licence Creative 
@@ -207,7 +214,7 @@ consentement écrit de la personne propriétaire ou concernée par l'image par l
 	comprenant une paire de lunettes associée à une caméra et un système informatique embarqué.</p>
 
 <p>Pour imaginer les avantages de cette technologie, voici le film promotionnel de Ray-Ban Meta publié sur YouTube  
-<a href="https://creativecommons.org/" target="_blank">&#127911; vidéo | Ray-Ban Stories - Meta</a></p>
+<a href="https://creativecommons.org/" target="_blank">&#127911; vidéo | Ray-Ban Stories, Meta</a></p>
 
 <div class="exerciceApplication">
 	<p><strong>A vous de jouer : </strong>expliquez à l'aide d'exemples concrets les avantages et les risques d'une telle 
