--- a/home/templates/sources/nsi/architecture/competence12.html
+++ b/home/templates/sources/nsi/architecture/competence12.html
@@ -3,7 +3,8 @@
 
 {% block contenu %} 
 <ul>
-    
+    <li>manipuler les images et captures écran</li>
+    <li>connaître les principales composantes d'une image</li>
 </ul>
 {% endblock contenu %}
 
