--- a/home/templates/sources/nsi/architecture/competence14.html
+++ b/home/templates/sources/nsi/architecture/competence14.html
@@ -15,7 +15,7 @@
 
 <h3>Introduction</h3>
 
-<p>La vidéo suivante publiée par <em>Fun Mooc</em> sur YouTube explique le fonctionnement de la triangulation :
+<p>La vidéo suivante publiée par <em>Fun Mooc</em> sur YouTube explique le fonctionnement de la géolocalisation :<br/>
     <a href="https://www.youtube.com/watch?time_continue=1&v=iTfNhcC2vBA&feature=emb_logo" target="_blank">&#127911; VIDEO | triangulation - Fun Mooc YouTube</a></p>
 
 <h3>Coordonnées géographiques</h3>
@@ -83,15 +83,6 @@ par exemple 34,3983°Nord 21,7742°Est.</p>
 <div class="exerciceApplication">
     <p><strong>A vous de jouer : </strong>quelles différences faites-vous entre le système GPS et le système Galileo ?</p>
 </div>
-
-
-<!-- LES CARTES NUMERIQUES -->
-
-<h3>Les cartes numériques</h3>
-
-<p>Les cartes numériques sont des images vectorielles composées de données de type raster. Les rasters sont des couches matricielles qui représentent la position que doit occuper l'image. Ainsi, chaque image est divisée en pixels qui deviennent visibles si l'on zoom suffisamment.</p>
-
-<img src="{% static 'home/images/nsi/raster.png' %}" alt="raster" width=20%>
 
 {% endblock cours %}
  
