--- a/home/templates/sources/nsi/architecture/competence15.html
+++ b/home/templates/sources/nsi/architecture/competence15.html
@@ -3,7 +3,7 @@
 
 {% block contenu %} 
 <ul>
-    
+    <li>utiliser des calculs de triangulation pour se localiser</li>
 </ul>
 {% endblock contenu %}
 
