--- a/home/templates/sources/nsi/architecture/competence16.html
+++ b/home/templates/sources/nsi/architecture/competence16.html
@@ -3,7 +3,8 @@
 
 {% block contenu %} 
 <ul>
-    
+    <li>utiliser les applications Google Maps et Geoportail pour se localiser</li>
+    <li>effectuer des calculs de triangulation pour se localiser</li>
 </ul>
 {% endblock contenu %}
 
