--- a/home/templates/sources/python/debuter/competence4.html
+++ b/home/templates/sources/python/debuter/competence4.html
@@ -142,7 +142,7 @@ questionnaireUnique(2);
 
 
 <!-- REPETER UNE ACTION AVEC UNE BOUCLE WHILE -->
-<p class="my-5 invisible" id="repeter">ancre</p>
+<p class="invisible" id="repeter">ancre</p>
 
 <h3>Répéter une action avec une boucle while</h3>
 
