--- a/home/static/home/styles/style52.css
+++ b/home/static/home/styles/style52.css
@@ -15,6 +15,10 @@ target: all pages */
   margin-bottom:2%;
 }
 
+.invisible{
+  visibility:hidden !important;
+  padding-top:7%;
+}
 .img_ombre{
   width:100%;
   border-radius:10px;
@@ -28,11 +32,15 @@ target: all pages */
 .couleur_reponseCorrecte {
   color:white;
   background-color:#49b749;
+  padding-right:3%;
+  padding-left:3%;
 }
 
 .couleur_reponseIncorrecte {
   color:white;
   background-color: #db4f4f;
+  padding-left:3%;
+  padding-right:3%;
 }
 
 .quiz-container{
